--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="C:\Users\Lewis\Desktop\Hw-Wireframe\style.css" rel="stylesheet" type="text/css">
     <title>Jermaine's Portfolio</title>
 </head>
 <body>
+
+    <header>header</header>
+
+    <nav>nav</nav>
+
+    <aside id="right">aside</aside>
+
+    <section id="left">
+        Section
+        <article>
+            Article
+            <div id="container">
+                h1,h2,h3 
+            </div> 
+            <div id="container2">
+                P 
+            </div>
+        </article>
+    </section>
+    
+    <footer>footer</footer>
     
 </body>
 </html>
